# zimfires

./: .gitignore  docker-compose.yml  next.config.ts  package-lock.json  package.json  scratch_full_schema.sql  scratch_test.mjs  scratch_test2.mjs
backend/: Dockerfile  downloaded_areas.json  pyproject.toml  start_backend.ps1
backend/app/: alerts.py  auth.py  database.py  ingest.py  logger.py  main.py  models.py  scheduler.py  schemas.py
backend/docs/: frontend_integration.md
backend/scripts/: generate_sql_inserts.py  init_db.py  load_boundaries.py  load_dummy_fires.py
backend/supabase/migrations/: 001_initial_schema.sql  002_alert_rules.sql  002_insert_boundaries.sql  003_burned_areas.sql  005_enhance_alerts.sql  006_thermal_alerts.sql
data/: landcover_stats.csv  parks.geojson
legacy/: index.html  vercel.json
legacy/css/: style.css
legacy/gee_scripts/: burned_areas_export.js  fire_points_export.js
legacy/js/: alerts.js  api_client.js  app.js  charts.js  filters.js  firms.js  map.js  risk.js  timeslider.js
legacy/scripts/: load_aoi_boundaries.py  load_burned_areas.py  process_historical_burnt.py
public/: zimbabwe-boundary.json
public/data/: burned_areas.json  burnt_trends.json  districts.json  fires.json  parks.json  provinces.json  wards.json  zim-mask.json
public/data/burnt/: 2001.json  2002.json  2003.json  2004.json  (+20 more)
src/app/: globals.css  layout.tsx  page.tsx
src/components/: app-footer.tsx  app-sidebar.tsx  data-portal.tsx  fire-map.tsx  top-header.tsx
src/hooks/: use-hotspots.ts
src/lib/: constants.ts  zimbabwe_geography.ts
(+29 files in other folders)
